# dataxformer-lsdipro-project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.sh
configs/: discovery.yaml  evaluation.yaml  ingestion.yaml
corpus_statistics/: table_statistics.csv  table_statistics.sql  tokenized_count.csv  tokenized_count.sql  value_count.csv  value_count.sql
fd_verifier_cache/: verification_results.pkl
src/: Frontend.py  Todo.txt  config.py  logger.py  pipeline.py  testing.py
src/database/: Querry_Factory.py  __init__.py  better_fd.py  direct_FD.py  info.txt.  mp_workers.py  multi_hop.py  query_factory.py  vertica_client.py
src/utils/: CsvLuceneTokenizer.java  fuzzy_matching.py  mp_workers.py
src/web_tables/: __init__.py  example_prepros.py  indexing.py  joining.py  querying.py  ranking.py
test_notebooks/: 3c.ipynb  Second_Test.ipynb  Third_Test.ipynb  This_func_works_great.ipynb  myfirsttests.ipynb  verica_test.ipynb
