[project]
name = "dataxformer"
version = "0.1.0"
description = "Implementation of the DataXFormer architecture (LSDI Project, TU Berlin)"
readme = "README.md"
requires-python = ">=3.10"

# Main runtime dependencies
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "nltk",                 # Tokenization, stemming, ngrams
    "tabulate",             # Pretty-printing tables
    "orjson",
    "vertica_python",
    "dotenv", 
    "streamlit",
    "wandb",
    "rapidfuzz"
]

# Development and research tool
[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "ipykernel",
]